Change secret reference to var reference

--- a/.github/workflows/test_credentials.yaml
+++ b/.github/workflows/test_credentials.yaml
@@ -18,4 +18,4 @@ jobs:
         else
           echo "BLUESKY_APP_PASSWORD is set"
         fi
-        echo "BLUESKY_USERNAME=${{ secrets.BLUESKY_USERNAME }}"
+        echo "BLUESKY_USERNAME=${{ vars.BLUESKY_USERNAME }}"
