--- a/.github/workflows/call_api.yaml
+++ b/.github/workflows/call_api.yaml
@@ -29,7 +29,6 @@ jobs:
         git config user.name "Automated"
         git config user.email "actions@users.noreply.github.com"
         git add -A
-        timestamp=$(date -u)
-        git commit -m "Update data: ${timestamp}" || exit 0
+        git commit -m "Update data" || exit 0
         git push
-          
+
